--- a/project1/Home/templates/checkupdate.html
+++ b/project1/Home/templates/checkupdate.html
@@ -33,7 +33,8 @@
     <thead class="thead-dark">
     {% for x in objNewUpdateInfo %}
     <tr>    
-    <td><a href="checkupdate/update/{{ x.id }}">{{ x.id }}</a></td>
+    {% comment %} <td><a href="checkupdate/update/{{ x.id }}">{{ x.id }}</a></td> {% endcomment %}
+    <td><a href="checkupdate/update/{{ x.id }}">{{ forloop.counter }}</a></td>
     <td>{{ x.name }}</td>
     <td>{{ x.beta }}</td>
     <td>{{ x.production }}</td>       
