--- a/project1/Home/templates/base.html
+++ b/project1/Home/templates/base.html
@@ -92,9 +92,17 @@
                 </ul>
               </li> 
               
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="http://10.30.48.116/cmdb/" target="_blank">CMDB</a>
-              </li>   
+                 <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  CMDB
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="http://10.30.48.116/cmdb/" target="_blank">CMDB-BETA</a></li>
+                  <li><a class="dropdown-item" href="http://192.168.0.104/cmdb-DCE/" target="_blank">CMDB-DCE</a></li>
+                  <li><a class="dropdown-item" href="http://192.168.0.104/cmdb-DCW/" target="_blank">CMDB-DCW</a></li>
+                </ul>
+              </li> 
+			  
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="http://10.30.48.116/inventory/Beta_all.html" target="_blank">Beta-Audit</a>
               </li>               
